--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "react-modal": "^3.1.11",
     "react-router-dom": "^4.2.2",
     "react-validation": "^3.0.7"
   }
